--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <h1> Liva Nur PULAT </h1>
 
 <h3> Hakkımda </h3>
-<p> Merhaba ben Liva Nur Pulat. Bolu'da yaşıyorum, 23 yaşındayım. En sevdiğim aktiviteler arasında yakın arkadaşlarımla yaptığım her şey ve dizi film izlemek yer alıyor :) Yapay zeka ile ilgileniyorum ancak front-end'e de merakım olduğu için bu eğitime başladım ve çok keyifli geçtiğini düşünüyorum :))</p>
+<p> Merhaba ben Liva Nur Pulat. Bolu'da yaşıyorum, 23 yaşındayım.<br> En sevdiğim aktiviteler arasında yakın arkadaşlarımla yaptığım her şey ve dizi film izlemek yer alıyor :) <br> Yapay zeka ile ilgileniyorum ancak front-end'e de merakım olduğu için bu eğitime başladım ve çok keyifli geçtiğini düşünüyorum :))</p>
 
 <h2> Sevdiğim Filmler ve Diziler </h2>
 
