updated for hw2

--- a/index.html
+++ b/index.html
@@ -1,16 +1,89 @@
-<h1> Liva Nur PULAT </h1>
+<div>
+    <h1> Liva Nur PULAT </h1>
+</div>
 
-<h3> Hakkımda </h3>
-<p> Merhaba ben Liva Nur Pulat. Bolu'da yaşıyorum, 23 yaşındayım.<br> En sevdiğim aktiviteler arasında yakın arkadaşlarımla yaptığım her şey ve dizi film izlemek yer alıyor :) <br> Yapay zeka ile ilgileniyorum ancak front-end'e de merakım olduğu için bu eğitime başladım ve çok keyifli geçtiğini düşünüyorum :))</p>
+<div>
+    <h3> Hakkımda </h3>
+    <p> Merhaba ben Liva Nur Pulat. Bolu'da yaşıyorum, 23 yaşındayım.<br>En sevdiğim aktiviteler arasında yakın
+        arkadaşlarımla yaptığım her şey ve dizi film izlemek yer alıyor.<br>Yapay zeka ile ilgileniyorum ancak
+        front-end'e de merakım olduğu için bu eğitime başladım ve çok keyifli geçtiğini düşünüyorum.</p>
+</div>
 
-<h2> Sevdiğim Filmler ve Diziler </h2>
+<div>
+    <h3> ilgi Alanlarım </h3>
+    <ol>
+        <li> FİLM
+            <ul>
+                <a href="https://www.imdb.com/list/ls072049366/" target="_blank">
+                    <li>
+                        Harry Potter
+                    </li>
+                </a>
 
-<!-- DİZİ -->
-<h4> Sherlock </h4>
-<p> Başrolünde Benedict Cumberbatch'in yer aldığı dizi bir gizem ve suç dramasıdır. </p>
-<p> Dizinin ana karakteri Sherlock'un keskin zekası izlerken beni en çok etkileyen şeydi :) </p>
+                <li>
+                    In Your Eyes
+                </li>
+                <li>
+                    Prestij
+                </li>
+            </ul>
+        </li>
+        <li> DİZİ
+            <ul>
+                <a href="https://www.imdb.com/title/tt1475582/" target="_blank">
+                    <li>
+                        Sherlock
+                    </li>
+                </a>
+                <li>
+                    The Witcher
+                </li>
+                <li>
+                    The Good Palace
+                </li>
+            </ul>
+        </li>
+        <li> KİTAP
+            <ul>
+                <a href="https://www.goodreads.com/book/show/968.The_Da_Vinci_Code" target="_blank">
+                    <li>
+                        Da Vinci's Code
+                    </li>
+                </a>
+                <li>
+                    Cehennem
+                </li>
+                <li>
+                    İyi Hissetmek
+                </li>
+            </ul>
 
-<!-- FİLM -->
-<h4> Harry Potter </h4>
-<p> Fantastik bir roman serisinden uyarlanmış bir film serisidir. Başrolünde Daniel Radcliffe oynamaktadır. </p>
-<p> Harry ve arkadaşlarının büyücülük okulunda geçen maceraları çok eğlenceli ve çocukluğumun unutulmaz filmleridir. </p>
+        </li>
+    </ol>
+</div>
+
+<div>
+    <h2> Sevdiğim Filmler ve Diziler </h2>
+
+    <!-- DİZİ -->
+    <h4> SHERLOCK </h4>
+    <span>
+        <a href="https://en.wikipedia.org/wiki/Sherlock_(TV_series)" target="_blank">
+            <img src="images\img2.jpg" alt="Sherlock" width="120" height="180" border="5px">
+        </a>
+    </span>
+    <p> Başrolünde Benedict Cumberbatch'in yer aldığı dizi bir gizem ve suç dramasıdır.<br>Dizinin ana karakteri
+        Sherlock'un keskin zekası izlerken beni en çok etkileyen şeydi.</p>
+
+    <!-- FİLM -->
+    <h4> HARRY POTTER </h4>
+    <span>
+        <a href="https://en.wikipedia.org/wiki/Harry_Potter_(film_series)" target="_blank">
+            <img src="images\img1.jpg" alt="Harry Potter" width="120" height="180" border="5px">
+        </a>
+    </span>
+    <p> Fantastik bir roman serisinden uyarlanmış bir film serisidir. Başrolünde Daniel Radcliffe oynamaktadır.<br>Harry
+        ve arkadaşlarının büyücülük okulunda geçen maceralarının gösterildiği bu film serisi çok eğlenceli ve
+        çocukluğumun unutulmazları arasında.
+    </p>
+</div>
